fixed zindex issues and header alignment issues

--- a/style.css
+++ b/style.css
@@ -77,10 +77,11 @@ body{
 }
 header{
     position: fixed;
+    z-index: 1;
     top: 0rem;
     background-color: slategrey;
-    width: 100%;
-    height: 3.1rem;
+    width: 100vw;
+    height: 15vw;
     font-size: 1rem;
     overflow: scroll;
     scrollbar-width: none;
@@ -101,6 +102,7 @@ header::-webkit-scrollbar{
 
 #menu-primary{
     margin: 0px;
+    margin-top: 15vw;
 }
 #menu-primary>li{
     list-style-type: none;
@@ -111,34 +113,42 @@ header::-webkit-scrollbar{
     text-decoration: none;
 }
 .header_title{
-    display: flex;
-    width: 100%;
-    height: 3.1rem;
-    align-items: center;
+    width: inherit;
+    height: inherit;
     color: white;
-    padding: 0rem 0rem 0rem 0rem;
     box-sizing:border-box;
 }
 .header_title_text{
     position: absolute;
-    top: 0.7rem;
-    left: 31vw
+    top: 0px;
+    left: 15vw;
+    width: 55vw;
+    height: 15vw;
+}
+.header_title_text>div{
+    display: flex;
+    height: 14vw;
+    align-items: center;
+    justify-content: center;
+    
 }
 .header_title>img{
     position: absolute;
     top: 0px;
-    height: 3.1rem;
-    width: 3.1rem;
-    right: 3.5rem;
+    height: 15vw;
+    width: 15vw;
+    right: 15vw;
 }
 .header_title>img:nth-child(1){
     left: 0px;
 }
 .nav_icon{
     position: absolute;
-    right: 1rem;
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 15vw;
+    width: 15vw;
+    right: 0px;
+    padding: 3vw;
+    box-sizing: border-box;
 }
 .nav_icon>img{
     height: 100%;
